# invalid-attachment-reproduction

./: .gitignore  Cargo.toml  index.html
src/: app.rs  dot_shader.wgsl  lib.rs  main.rs  shader.wgsl  surface.rs  surface_view.rs  surface_view_shader.wgsl
