[package]
name = "hellopaint-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = { version = "0.15", features = ["webgl"] }
pollster = "0.3"
env_logger = "0.10"

bytemuck = { version = "1", features = ["derive"] }

rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", featues = [] }

console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen-futures = "0.4"



eframe = { version = "0.21", features = ["wgpu", "persistence"], default-features = false }
egui = "0.21"
serde = { version = "1", features = ["derive"] }
tracing-wasm = "0.2"
tracing-subscriber = "0.3"

ewebsock = "0.2.0"

tracing = { version = "0.1", features = ["log"] }
